cambio de rutas de la constante CACHE_NAME archivo sw.js, y cambio de la ruta de la propiedad start_url del archivo manifest.json

--- a/assets/json/manifest.json
+++ b/assets/json/manifest.json
@@ -7,9 +7,9 @@
 	"theme_color":"#ffff",
 	"orientation":"portrait",
 	"display":"standalone",
-	"start_url":"../../?utm_source=web_app_manifest",
+	"start_url":"../../index.php",
 	"scope":"../../",
-	"lang":"es-MX",
+	"lang":"es-MEX",
 	"icons":[
 
 		{
