se descargo el proyecto de hosting, se desarrollo la funcionalidad del formulario modal para que se pueda seleccionar el tipo de comprobante y se modifique auntoamticamente el pdf

--- a/assets/json/manifest.json
+++ b/assets/json/manifest.json
@@ -15,7 +15,7 @@
 	"icons":[
 
 		{
-			"src":"../img/fondo_pdf_logo_sincolor4.png",
+			"src":"../img/enchufe_shortcut.png",
 			"sizes":"512x512",
 			"type":"image/png"
 		}
